# smoke-renderer

./: CMakeLists.txt  FileIO.hpp  GLMainWindow.cpp  GLMainWindow.hpp  GLMainWindow.ui  MyRenderer.cpp  MyRenderer.hpp  MyRendererUtils.hpp  OpenGLRenderer.hpp  OpenGLWidget.cpp  OpenGLWidget.hpp  README.md  main.cpp  shaders.qrc  textures.qrc
CMake/: SetupQtPrefixPath.cmake
OpenGLObjects/include/: OpenGLObjects.h
OpenGLObjects/src/: OpenGLObjects.cpp
eigen/: version.txt
eigen/share/eigen3/cmake/: Eigen3Targets.cmake
shaders/: debug.frag  debug.vert  deepShadowMap.comp  depth.frag  depth.vert  particleCreation.comp  phong_color.frag  phong_color.vert  phong_textured.frag  phong_textured.vert  shadowVolume.comp  smokeParticle.frag  smokeParticle.vert  smokeSlice.frag  smokeSlice.vert
